# http-server

./: .gitignore  CMakeLists.txt
config/: config.json
include/: access_logger.h  config_manager.h  connection_handler.h  file_handler.h  http_parser.h  http_response.h  logger.h  metrics_manager.h  mime_type.h  path_validator.h  request_handler.h  response_builder.h  router.h  server.h  socket_utils.h  static_file_handler.h  thread_pool.h
src/: access_logger.cpp  config_manager.cpp  connection_handler.cpp  file_handler.cpp  http_parser.cpp  logger.cpp  main.cpp  metrics_manager.cpp  mime_type.cpp  path_validator.cpp  request_handler.cpp  response_builder.cpp  router.cpp  server.cpp  socket_utils.cpp  static_file_handler.cpp  thread_pool.cpp
static/: about.html  contact.html  index.html  style.css
